// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeNull should return false for  (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be null.
    got: string
",
  "pass": false,
}
`;

exports[`testing toBeNull should return false for 1 (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be null.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeNull should return false for Symbol() (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be null.
    got: symbol
",
  "pass": false,
}
`;

exports[`testing toBeNull should return false for any (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be null.
    got: any
",
  "pass": false,
}
`;

exports[`testing toBeNull should return false for false (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be null.
    got: boolean
",
  "pass": false,
}
`;

exports[`testing toBeNull should return false for null (isNot true) 1`] = `
Object {
  "message": "    
    expected should be null.
    got: null
",
  "pass": false,
}
`;

exports[`testing toBeNull should return false for true (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be null.
    got: boolean
",
  "pass": false,
}
`;

exports[`testing toBeNull should return false for undefined (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be null.
    got: undefined
",
  "pass": false,
}
`;
